--- a/docs/src/content/docs/guides/customization.mdx
+++ b/docs/src/content/docs/guides/customization.mdx
@@ -195,6 +195,7 @@ export default defineConfig({
         github: 'https://github.com/withastro/starlight',
         mastodon: 'https://m.webtoo.ls/@astro',
         twitter: 'https://twitter.com/astrodotbuild',
+        codeberg: 'https://codeberg.org/knut/examples',
       },
     }),
   ],
