i18n(fr): translate tab labels that were forgotten
Co-authored-by: HiDeoo <494699+HiDeoo@users.noreply.github.com>

--- a/docs/src/content/docs/fr/guides/customization.mdx
+++ b/docs/src/content/docs/fr/guides/customization.mdx
@@ -124,7 +124,7 @@ tableOfContents:
 ```
 
   </TabItem>
-  <TabItem label="Global config">
+  <TabItem label="Configuration globale">
 
 ```js
 // astro.config.mjs
