--- a/docs/src/content/docs/fr/guides/customization.mdx
+++ b/docs/src/content/docs/fr/guides/customization.mdx
@@ -207,7 +207,7 @@ Starlight peut afficher un lien "Modifier la page" dans le pied de page de chaqu
 Cela permet au lecteur de trouver facilement le fichier à modifier pour améliorer vos documents.
 Pour les projets open source en particulier, cela peut aider à encourager les contributions de votre communauté.
 
-Pour activer les liens de modification, définissez l’option de configuration [`editLink.baseUrl`](/reference/configuration/#editlink) en lui assignat l’URL utilisée pour modifier votre référentiel. Cela se passe dans la configuration de l’intégration Starlight.
+Pour activer les liens de modification, définissez l’option de configuration [`editLink.baseUrl`](/reference/configuration/#editlink) en lui assignant l’URL utilisée pour modifier votre référentiel dans la configuration de l’intégration Starlight.
 La valeur de `editLink.baseUrl` sera automatiquement ajoutée au chemin d’accès vers la page actuelle pour former le lien d’édition complet.
 
 Les motifs courants incluent:
