i18n(fr): fix bad internal link
Co-authored-by: HiDeoo <494699+HiDeoo@users.noreply.github.com>

--- a/docs/src/content/docs/fr/guides/customization.mdx
+++ b/docs/src/content/docs/fr/guides/customization.mdx
@@ -252,7 +252,7 @@ Vous pouvez personnaliser cela en ajoutant un fichier `404.md` (ou `404.mdx`) à
 
 </FileTree>
 
-Vous pouvez utiliser toutes les techniques de mise en page et de personnalisation de Starlight dans votre page 404. Par exemple, la page 404 par défaut utilise les composants [`splash` template](#page-layout) et [`hero`](/reference/frontmatter/#hero) dans son frontmatter :
+Vous pouvez utiliser toutes les techniques de mise en page et de personnalisation de Starlight dans votre page 404. Par exemple, la page 404 par défaut utilise la [mise en page `splash`](#mise-en-page) et le composant [`hero`](/reference/frontmatter/#hero) dans son frontmatter :
 
 ```md
 ---
