i18n(fr): change “éditer” to “modifier”

--- a/docs/src/content/docs/fr/guides/customization.mdx
+++ b/docs/src/content/docs/fr/guides/customization.mdx
@@ -203,7 +203,7 @@ export default defineConfig({
 
 ## Liens d’édition de page
 
-Starlight peut afficher un lien "Modifier la page" dans le pied de page de chaque page.
+Starlight peut afficher un lien "Modifier cette page" dans le pied de page de chaque page.
 Cela permet au lecteur de trouver facilement le fichier à modifier pour améliorer vos documents.
 Pour les projets open source en particulier, cela peut aider à encourager les contributions de votre communauté.
 
