--- a/packages/starlight/translations/es.json
+++ b/packages/starlight/translations/es.json
@@ -18,5 +18,5 @@
   "page.lastUpdated": "Última actualización:",
   "page.previousLink": "Página anterior",
   "page.nextLink": "Siguiente página",
-  "404.text": "Página no encontrada. Verifique la URL o intente usar la barra de búsqueda."
+  "404.text": "Página no encontrada. Verifica la URL o intenta usar la barra de búsqueda."
 }
