--- a/docs/src/content/docs/guides/customization.mdx
+++ b/docs/src/content/docs/guides/customization.mdx
@@ -178,7 +178,7 @@ defineConfig({
 
 Starlight has built-in support for adding links to your social media accounts to the site header via the [`social`](/reference/configuration/#social) option in the Starlight integration.
 
-Currently, links to Codeberg, Discord, GitHub, Mastodon, Twitter and Youtube are supported.
+Currently, links to Codeberg, Discord, GitHub, Mastodon, Twitter, and Youtube are supported.
 Let us know on GitHub or Discord if you need support for another service!
 
 ```js
