Apply suggestions from code review
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>
Co-authored-by: Paul Valladares <85648028+dreyfus92@users.noreply.github.com>

--- a/docs/src/content/docs/es/guides/components.mdx
+++ b/docs/src/content/docs/es/guides/components.mdx
@@ -105,7 +105,7 @@ Utiliza una cuadrícula de tarjetas en tu página de inicio para mostrar las car
 ### Iconos
 
 import { Icon } from '@astrojs/starlight/components';
-import IconsList from '../../../components/icons-list.astro';
+import IconsList from '../../../../components/icons-list.astro';
 
 Starlight proporciona un conjunto de iconos comunes que puedes mostrar en tu contenido utilizando el componente `<Icon>`.
 
