Include additional instructions for using custom fonts (#291)
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/docs/src/content/docs/guides/customization.mdx
+++ b/docs/src/content/docs/guides/customization.mdx
@@ -449,3 +449,5 @@ main {
   font-family: 'IBM Plex Serif', serif;
 }
 ```
+
+Follow the [custom CSS instructions](#custom-css-styles) to add your styles to your site.
