--- a/docs/src/content/docs/es/guides/customization.mdx
+++ b/docs/src/content/docs/es/guides/customization.mdx
@@ -444,3 +444,5 @@ main {
   font-family: 'IBM Plex Serif', serif;
 }
 ```
+
+Sigue las [instrucciones de CSS personalizado](#estilos-css-personalizados) para agregar tus estilos a tu sitio.
