docs: add `locales` & `defaultLocale` links to config reference

--- a/docs/src/content/docs/es/guides/i18n.mdx
+++ b/docs/src/content/docs/es/guides/i18n.mdx
@@ -9,7 +9,7 @@ Starlight proporciona soporte incorporado para sitios multilingües, incluidas l
 
 ## Configura i18n
 
-1. Indícale a Starlight los idiomas que admites pasando `locales` y `defaultLocale` a la integración de Starlight:
+1. Indícale a Starlight los idiomas que admites pasando [`locales`](/es/reference/configuration/#locales) y [`defaultLocale`](/es/reference/configuration/#defaultlocale) a la integración de Starlight:
 
    ```js
    // astro.config.mjs
