--- a/docs/src/content/docs/guides/i18n.mdx
+++ b/docs/src/content/docs/guides/i18n.mdx
@@ -9,7 +9,7 @@ Starlight provides built-in support for multilingual sites, including routing, f
 
 ## Configure i18n
 
-1. Tell Starlight about the languages you support by passing `locales` and `defaultLocale` to the Starlight integration:
+1. Tell Starlight about the languages you support by passing [`locales`](/reference/configuration/#locales) and [`defaultLocale`](/reference/configuration/#defaultlocale) to the Starlight integration:
 
    ```js
    // astro.config.mjs
