--- a/docs/src/content/docs/it/guides/i18n.mdx
+++ b/docs/src/content/docs/it/guides/i18n.mdx
@@ -9,7 +9,7 @@ Starlight offre il supporto per siti multilingua, compreso di indirizzamento, co
 
 ## Configurare i18n
 
-1. Indicare a Starlight le lingue che si vuole supportare passando `locales` e `defaultLocale` all'integrazione Starlight:
+1. Indicare a Starlight le lingue che si vuole supportare passando [`locales`](/it/reference/configuration/#locales) e [`defaultLocale`](/it/reference/configuration/#defaultlocale) all'integrazione Starlight:
 
    ```js
    // astro.config.mjs
