Don’t use class selector `.` in not-content class name docs
Co-authored-by: Paul Valladares <85648028+dreyfus92@users.noreply.github.com>

--- a/docs/src/content/docs/guides/components.mdx
+++ b/docs/src/content/docs/guides/components.mdx
@@ -36,7 +36,7 @@ Learn more about [using components in MDX](https://docs.astro.build/en/guides/ma
 ### Compatibility with Starlight’s styles
 
 Starlight applies default styling to your Markdown content, for example adding margin between elements.
-If these styles conflict with your component’s appearance, set the `.not-content` class on your component to disable them.
+If these styles conflict with your component’s appearance, set the `not-content` class on your component to disable them.
 
 ```astro
 ---
