chore: applied suggestions

--- a/docs/src/content/docs/fr/guides/components.mdx
+++ b/docs/src/content/docs/fr/guides/components.mdx
@@ -43,7 +43,7 @@ Si ces styles entrent en conflit avec l'apparence de votre composant, définisse
 // src/components/Example.astro
 ---
 <div class="not-content">
-  <p>Not impacted by Starlight’s default content styling.</p>
+  <p>Contenu non affecté par les styles par défaut de Starlight.</p>
 </div>
 ```
 
@@ -82,7 +82,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 Vous pouvez afficher du contenu dans une boîte correspondant aux styles de Starlight en utilisant le composant `<Card>`.
 Enveloppez plusieurs cartes dans le composant `<CardGrid>` pour afficher les cartes côte à côte lorsqu'il y a suffisamment d'espace.
 
-Une `<Card>` nécessite un `title` et peut optionellement inclure un attribut `icon` fixé au nom de [l'une des icônes intégrées de Starlight](#all-icons).
+Une `<Card>` nécessite un `title` et peut optionellement inclure un attribut `icon` fixé au nom de [l'une des icônes intégrées de Starlight](#toutes-les-icônes).
 
 ```mdx
 import { Card, CardGrid } from '@astrojs/starlight/components';
@@ -124,14 +124,14 @@ Ajoutez l'attribut `stagger` pour décaler verticalement la deuxième colonne de
 
 :::
 
-### Icon
+### Icônes
 
 import { Icon } from '@astrojs/starlight/components';
-import IconsList from '../../../components/icons-list.astro';
+import IconsList from '../../../../components/icons-list.astro';
 
 Starlight fournit un ensemble d'icônes courantes que vous pouvez afficher dans votre contenu à l'aide du composant `<Icon>`.
 
-Chaque `<Icon>` nécessite un [`name`](#all-icons) et peut optionellement inclure un attribut `label`, `size` et `color`.
+Chaque `<Icon>` nécessite un [`name`](#toutes-les-icônes) et peut optionellement inclure un attribut `label`, `size` et `color`.
 
 ```mdx
 import { Icon } from '@astrojs/starlight/components';
