--- a/packages/starlight/translations/zh.json
+++ b/packages/starlight/translations/zh.json
@@ -13,7 +13,7 @@
   "sidebarNav.accessibleLabel": "主要",
   "tableOfContents.onThisPage": "本页",
   "tableOfContents.overview": "概述",
-  "i18n.untranslatedContent": "此内容尚不支持您的语言。",
+  "i18n.untranslatedContent": "此内容尚不支持你的语言。",
   "page.editLink": "编辑此页",
   "page.lastUpdated": "最近更新：",
   "page.previousLink": "上一页",
