feat: add code block title

--- a/docs/src/content/docs/guides/components.mdx
+++ b/docs/src/content/docs/guides/components.mdx
@@ -14,7 +14,7 @@ Starlight supports the use of components in [MDX](https://mdxjs.com/) files and 
 You can use a component by importing it into your MDX file and then rendering it as a JSX tag.
 These look like HTML tags but start with an uppercase letter matching the name in your `import` statement:
 
-```mdx
+```mdx title="src/content/docs/index.mdx"
 ---
 # src/content/docs/index.mdx
 title: Welcome to my docs
