Apply Elian’s suggestions
Co-authored-by: Elian ☕️ <hello@elian.codes>

--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -51,7 +51,7 @@ Try Starlight in your browser:
 :::
 
 
-## Add starlight to an existing project
+## Add Starlight to an existing project
 
 Use the `astro add` command:
 <Tabs>
@@ -65,7 +65,7 @@ Use the `astro add` command:
     <TabItem label="pnpm">
         ```sh
         # upgrade Starlight with pnpm
-        pnpx astro add starlight
+        pnpm dlx astro add starlight
         ```
     </TabItem>
     <TabItem label="Yarn">
