The genuine article
Co-authored-by: Yan Thomas <61414485+Yan-Thomas@users.noreply.github.com>

--- a/docs/src/content/docs/manual-setup.mdx
+++ b/docs/src/content/docs/manual-setup.mdx
@@ -102,9 +102,9 @@ If you have an existing Astro project, you can use Starlight to quickly add a do
 
 ### Use Starlight at a subpath
 
-To add all Starlight pages at subpath, place all your docs content inside a subdirectory of `src/content/docs/`.
+To add all Starlight pages at a subpath, place all your docs content inside a subdirectory of `src/content/docs/`.
 
-For example if Starlight pages should all start with `/guides/`, add your content in the `src/content/docs/guides/` directory:
+For example, if Starlight pages should all start with `/guides/`, add your content in the `src/content/docs/guides/` directory:
 
 import FileTree from '../../components/file-tree.astro';
 
