--- a/docs/src/content/docs/manual-setup.mdx
+++ b/docs/src/content/docs/manual-setup.mdx
@@ -36,7 +36,7 @@ Starlight is an [Astro integration](https://docs.astro.build/en/guides/integrati
 
 </Tabs>
 
-This will install required dependencies and add Starlight to the `integrations` array in your Astro config file.
+This will install the required dependencies and add Starlight to the `integrations` array in your Astro config file.
 
 ### Configure the integration
 
