--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -122,3 +122,11 @@ yarn upgrade @astrojs/starlight --latest
 </Tabs>
 
 You can see a full list of the changes made in each release in [the Starlight changelog](https://github.com/withastro/starlight/blob/main/packages/starlight/CHANGELOG.md).
+
+## Troubleshooting Starlight
+
+Both Starlight [project configuration](/reference/configuration/) and [individual page frontmatter configuration](/reference/frontmatter/) information is available in the Reference section of this site. Use these pages to ensure that your Starlight site is configured and functioning properly.
+
+See the growing list of guides in the sidebar for help adding content and customizing your Starlight site.
+
+If your answer cannot be found in these docs, please visit the [full Astro Docs](https://docs.astro.build) for complete Astro documentation. Your question may be answerd by understanding how Astro works in general, underneath this Starlight theme.
