--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -129,4 +129,4 @@ Both Starlight [project configuration](/reference/configuration/) and [individua
 
 See the growing list of guides in the sidebar for help adding content and customizing your Starlight site.
 
-If your answer cannot be found in these docs, please visit the [full Astro Docs](https://docs.astro.build) for complete Astro documentation. Your question may be answerd by understanding how Astro works in general, underneath this Starlight theme.
+If your answer cannot be found in these docs, please visit the [full Astro Docs](https://docs.astro.build) for complete Astro documentation. Your question may be answered by understanding how Astro works in general, underneath this Starlight theme.
