--- a/docs/src/content/docs/es/manual-setup.mdx
+++ b/docs/src/content/docs/es/manual-setup.mdx
@@ -5,8 +5,7 @@ description: Aprende como configurar Starlight manualmente para agregarlo a un p
 
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
-The quickest way to create a new Starlight site is using `create astro` as shown in the [Getting Started guide](/getting-started/#creating-a-new-project).
-La manera más rápida de crear un nuevo sitio Starlight es usando `create astro` como se muestra en la [Guía de Inicio Rápido](/getting-started/#creating-a-new-project).
+La manera más rápida de crear un nuevo sitio Starlight es usando `create astro` como se muestra en la [Guía de Inicio Rápido](/es/getting-started/#creating-a-new-project).
 Si quieres agregar Starlight a un proyecto Astro existente, esta guía te explicará como hacerlo.
 
 ## Configuración de Starlight
@@ -107,7 +106,7 @@ Para agregar todas las páginas de Starlight en una subruta, coloca todo tu cont
 
 Por ejemplo, si las páginas de Starlight deben comenzar con `/guides/`, agrega tu contenido en el directorio `src/content/docs/guides/`:
 
-import FileTree from '../../components/file-tree.astro';
+import FileTree from '../../../components/file-tree.astro';
 
 <FileTree>
 
