chore: applied suggestions

--- a/docs/src/content/docs/fr/getting-started.mdx
+++ b/docs/src/content/docs/fr/getting-started.mdx
@@ -88,10 +88,10 @@ Une fois que vous avez créé et personnalisé votre site Web Starlight, vous po
 
 ## Dépannage de Starlight
 
-Les informations de configuration du projet Starlight [configuration du projet](/fr/reference/configuration/) et [configuration du frontmatter de la page individuelle](/fr/reference/frontmatter/) sont disponibles dans la section Référence de ce site. Utilisez ces pages pour vous assurer que votre site Starlight est configuré et fonctionne correctement.
+Les informations [configuration de projet](/fr/reference/configuration/) et [configuration du frontmatter de la page individuelle](/fr/reference/frontmatter/) pour Starlight sont disponibles dans la section Référence de ce site. Utilisez ces pages pour vous assurer que votre site Starlight est configuré et fonctionne correctement.
 
-Voyez la liste croissante de guides dans la barre latérale pour vous aider à ajouter du contenu et à personnaliser votre site Starlight.
+Utilisez la liste croissante de guides dans la barre latérale pour vous aider à ajouter du contenu et à personnaliser votre site Starlight.
 
-Si vous ne trouvez pas de réponse dans cette documentation, veuillez consulter la [documentation complète d'Astro](https://docs.astro.build) pour obtenir la documentation complète d'Astro. Votre question peut être résolue en comprenant comment Astro fonctionne en général, sous ce thème Starlight.
+Si vous ne trouvez pas votre réponse dans cette documentation, veuillez consulter la [documentation complète d'Astro](https://docs.astro.build) pour obtenir la documentation complète d'Astro. Votre question peut être résolue en comprenant comment Astro fonctionne en général, sous ce thème Starlight.
 
-Vous pouvez également obtenir de l'aide dans le [Discord Astro](https://astro.build/chat/) de notre communauté active et sympathique ! Vous pouvez poster des questions dans notre forum `#support` ou visiter notre canal dédié `#starlight` pour discuter du développement en cours et plus encore !
+Vous pouvez également obtenir de l'aide dans le [Discord Astro](https://astro.build/chat/) de notre communauté active et sympathique ! Vous pouvez poster des questions dans notre forum `#support` ou visiter notre canal dédié `#starlight` pour discuter des développements en cours et plus encore !
