--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -125,7 +125,7 @@ You can see a full list of the changes made in each release in [the Starlight ch
 
 ## Troubleshooting Starlight
 
-Both Starlight [project configuration](/reference/configuration/) and [individual page frontmatter configuration](/reference/frontmatter/) information is available in the Reference section of this site. Use these pages to ensure that your Starlight site is configured and functioning properly.
+Both Starlight [project configuration](/reference/configuration/) and [individual page frontmatter configuration](/reference/frontmatter/) information are available in the Reference section of this site. Use these pages to ensure that your Starlight site is configured and functioning properly.
 
 See the growing list of guides in the sidebar for help adding content and customizing your Starlight site.
 
