--- a/docs/src/content/docs/fr/getting-started.mdx
+++ b/docs/src/content/docs/fr/getting-started.mdx
@@ -92,6 +92,6 @@ Les informations [configuration de projet](/fr/reference/configuration/) et [con
 
 Utilisez la liste croissante de guides dans la barre latérale pour vous aider à ajouter du contenu et à personnaliser votre site Starlight.
 
-Si vous ne trouvez pas votre réponse dans cette documentation, veuillez consulter la [documentation complète d'Astro](https://docs.astro.build) pour obtenir la documentation complète d'Astro. Votre question peut être résolue en comprenant comment Astro fonctionne en général, sous ce thème Starlight.
+Si vous ne trouvez pas votre réponse dans cette documentation, veuillez consulter la [documentation complète d'Astro](https://docs.astro.build). Votre question peut être résolue en comprenant comment Astro fonctionne en général, sous ce thème Starlight.
 
 Vous pouvez également obtenir de l'aide dans le [Discord Astro](https://astro.build/chat/) de notre communauté active et sympathique ! Vous pouvez poster des questions dans notre forum `#support` ou visiter notre canal dédié `#starlight` pour discuter des développements en cours et plus encore !
