--- a/docs/src/content/docs/guides/components.mdx
+++ b/docs/src/content/docs/guides/components.mdx
@@ -20,8 +20,8 @@ These look like HTML tags but start with an uppercase letter matching the name i
 title: Welcome to my docs
 ---
 
-import SomeComponent from "../../components/SomeComponent.astro";
-import AnotherComponent from "../../components/AnotherComponent.astro";
+import SomeComponent from '../../components/SomeComponent.astro';
+import AnotherComponent from '../../components/AnotherComponent.astro';
 
 <SomeComponent prop="something" />
 
@@ -54,13 +54,13 @@ These components are available from the `@astrojs/starlight/components` package.
 
 ### Tabs
 
-import { Tabs, TabItem } from "@astrojs/starlight/components";
+import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 You can display a tabbed interface using the `<Tabs>` and `<TabItem>` components.
 Each `<TabItem>` must have a `label` to display to users.
 
 ```mdx
-import { Tabs, TabItem } from "@astrojs/starlight/components";
+import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 <Tabs>
   <TabItem label="Stars">Sirius, Vega, Betelgeuse</TabItem>
@@ -77,7 +77,7 @@ The code above generates the following tabs on the page:
 
 ### Cards
 
-import { Card, CardGrid } from "@astrojs/starlight/components";
+import { Card, CardGrid } from '@astrojs/starlight/components';
 
 You can display content in a box matching Starlight’s styles using the `<Card>` component.
 Wrap multiple cards in the `<CardGrid>` component to display cards side-by-side when there’s enough space.
@@ -85,7 +85,7 @@ Wrap multiple cards in the `<CardGrid>` component to display cards side-by-side 
 A `<Card>` requires a `title` and can optionally include an `icon` attribute set to the name of [one of Starlight’s built-in icons](#all-icons).
 
 ```mdx
-import { Card, CardGrid } from "@astrojs/starlight/components";
+import { Card, CardGrid } from '@astrojs/starlight/components';
 
 <Card title="Check this out">Interesting content you want to highlight.</Card>
 
@@ -126,39 +126,34 @@ Add the `stagger` attribute to shift the second column of cards vertically and a
 
 ### Link Cards
 
-import { LinkCard } from "@astrojs/starlight/components";
+import { LinkCard } from '@astrojs/starlight/components';
 
 <LinkCard
-    icon="sun"
-    link="#link-cards"
-    title="A single card by itself"
-    description="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
-  />
+  link="#link-cards"
+  title="A single card by itself"
+  description="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+/>
 
 <CardGrid>
   <LinkCard
-    icon="star"
     link="#link-cards"
-    title="Title with icon and description"
+    title="Title with description"
     description="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
   />
-    <LinkCard link="#link-cards" title="Title with no icon" description="Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." />
-
-  <LinkCard icon="setting" link="#link-cards" title="Title and Icon" />
   <LinkCard link="#link-cards" title="Title Only" />
 </CardGrid>
 
 ### Icon
 
-import { Icon } from "@astrojs/starlight/components";
-import IconsList from "../../../components/icons-list.astro";
+import { Icon } from '@astrojs/starlight/components';
+import IconsList from '../../../components/icons-list.astro';
 
 Starlight provides a set of common icons that you can display in your content using the `<Icon>` component.
 
 Each `<Icon>` requires a [`name`](#all-icons) and can optionally include a `label`, `size`, and `color` attribute.
 
 ```mdx
-import { Icon } from "@astrojs/starlight/components";
+import { Icon } from '@astrojs/starlight/components';
 
 <Icon name="star" color="goldenrod" size="2rem" />
 ```
