extend `a` HTML element, rename `title` to `heading`
Signed-off-by: Lorenzo Lewis <lorenzo_lewis@icloud.com>

--- a/docs/src/content/docs/guides/components.mdx
+++ b/docs/src/content/docs/guides/components.mdx
@@ -129,18 +129,18 @@ Add the `stagger` attribute to shift the second column of cards vertically and a
 import { LinkCard } from '@astrojs/starlight/components';
 
 <LinkCard
-  link="#link-cards"
-  title="A single card by itself"
+  href="#link-cards"
+  heading="A single card by itself"
   description="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
 />
 
 <CardGrid>
   <LinkCard
-    link="#link-cards"
-    title="Title with description"
+    href="#link-cards"
+    heading="Title with description"
     description="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
   />
-  <LinkCard link="#link-cards" title="Title Only" />
+  <LinkCard link="#link-cards" heading="Title Only" />
 </CardGrid>
 
 ### Icon
